added some sections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,12 @@
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Work+Sans:ital,wght@0,400;0,600;0,800;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Work+Sans:ital,wght@0,400;0,600;0,800;1,400;1,700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <Header>
         <nav>
@@ -29,8 +33,8 @@
                     <li>
                         <div id="shadow">
                             <a href="">Follow Us on</a>
-                        <a href=""><img src="images/Vector.svg" alt=""></a>
-                        <a href=""><img src="images/tik-tok 1.svg" alt="" srcset=""></a>
+                            <a href=""><img src="images/Vector.svg" alt=""></a>
+                            <a href=""><img src="images/tik-tok 1.svg" alt="" srcset=""></a>
                         </div>
 
                     </li>
@@ -39,8 +43,8 @@
         </nav>
         <di class="banner">
             <div class="banner-content">
-                    <div class="banner-content-child">
-                        <h2 class="section-title">Play Like The</h2>
+                <div class="banner-content-child">
+                    <h2 class="section-title">Play Like The</h2>
                     <h1 class="bold">G.O.A.T.</h1>
                     <ul>
                         <li>1-Click instant play</li>
@@ -50,7 +54,7 @@
                     <button class="btn-pink button" type="button">Sign In</button>
                     <button class="btn-blue button" type="button">Go Rogue</button>
                 </div>
-                    </div>
+            </div>
             <div class="banner-img">
                 <img src="images/Group 18.png" alt="" srcset="">
             </div>
@@ -59,7 +63,7 @@
     <main>
         <section class="online-games">
             <h3 class="section-title-O">
-                Online Games <span class="purple">Funny Videos</span> 
+                Online Games <span class="purple">Funny Videos</span>
             </h3>
             <p class="section-description">
                 A Collection of Hilarious Videos to Brighten Your Day
@@ -68,6 +72,9 @@
                 <div class="games">
                     <img src="images/Rectangle 4.png" alt="">
                     <p class="section-description-img">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <!-- <div class="middle">
+                        <img src="images/play-button 1.png" alt="">
+                    </div> -->
                 </div>
                 <div class="games">
                     <img src="images/Rectangle 5.png" alt="">
@@ -81,6 +88,21 @@
                     <img src="images/Rectangle 6.png" alt="">
                     <p class="section-description-img">Busted gaming on school laptop, but you are still lit.</p>
                 </div>
+
+            </div>
+        </section>
+        <section class="feature">
+            <div class="feature-content">
+                <h2 class="section-title-1">
+                    <span class="Pink">Plat Instantly,</span><br>
+                    No Downloads <br>
+                    No Installs.
+                </h2>
+            </div>
+            <div class="feature-images">
+                <img id="big" src="images/Rectangle 66.png" alt="" class="s">
+                <img  id="small" src="images/Rectangle 55.png" alt="" class="s">
+                
             </div>
         </section>
     </main>
@@ -89,4 +111,5 @@
     </footer>
     <script src="https://kit.fontawesome.com/5f237c26ca.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
