--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <section class="feature">
             <div class="feature-content">
                 <h2 class="section-title-1">
-                    <span class="Pink">Plat Instantly,</span><br>
+                    <span class="Pink">Play Instantly,</span><br>
                     No Downloads <br>
                     No Installs.
                 </h2>
@@ -121,36 +121,64 @@
                 <img src="images/Rectangle 11.png" alt="">
                 <p class="last-games-description">Action Games</p>
             </div> -->
-            <div class="items">
-                <img src="images/Rectangle 11.png" alt="">
-                <p class="last-games-description">Action Games</p>
-            <!-- <div class="items">
-                <img src="images/Rectangle 12.png" alt="">
-                <p class="last-games-description">Action Games</p>
-            <div class="items">
-                <img src="images/Rectangle 13.png" alt="">
-                <p class="last-games-description">Action Games</p>
-            <div class="items">
-                <img src="images/Rectangle 14.png" alt="">
-                <p class="last-games-description">Action Games</p>
-            <div class="items">
-                <img src="images/Rectangle 15.png" alt="">
-                <p class="last-games-description">Action Games</p>
-            <div class="items">
-                <img src="images/Rectangle 16.png" alt="">
-                <p class="last-games-description">Action Games</p>
-            <div class="items">
-                <img src="images/Rectangle 17.png" alt="">
-                <p class="last-games-description">Action Games</p>
+            <div class="main">
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 11.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 12.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 13.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 14.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 15.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 16.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 17.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 18.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="main-items">
+                        <div class="item-img"><img src="images/Rectangle 19.png" alt="" srcset=""></div>
+                        <div class="item-text"><p>Action Games</p></div>
+                    </div>
+                </a>
+                
             </div>
-            <div class="items">
-                <img src="images/Rectangle 18.png" alt="">
-                <p class="last-games-description">Action Games</p>
-            </div>
-            <div class="items">
-                <img src="images/Rectangle 19.png" alt="">
-                <p class="last-games-description">Strategy Games</p>
-            </div> -->
+            
         </section>
     </main>
     <footer>
