--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Work+Sans:ital,wght@0,400;0,600;0,800;1,400;1,700&display=swap"
         rel="stylesheet">
+        <script src="https://kit.fontawesome.com/5f237c26ca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -184,9 +185,39 @@
         </section>
     </main>
     <footer>
-
+        <div class="middle">
+            <img src="images/Frame.png" alt="" srcset="">
+            <h3>
+                <span class="Pink">G</span>amer
+            </h3>
+        </div>
+        <div class="keys">
+            <a href="">Our Story</a>
+            <a href="">Games</a>
+            <a href="">Web Games</a>
+            <a href="">Careers</a>
+            <a href="">Support</a>
+            <a href="">My Account</a>
+        </div>
+        <div class="social-medias">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-apple"></i></a>
+        </div>
+        <div class="policy">
+            <p>Terms and Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p>
+            <p>Privacy Settings</p>
+        </div>
+        <div class="policy" id="last">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
     </footer>
-    <script src="https://kit.fontawesome.com/5f237c26ca.js" crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
