--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamer</title>
+    <title>Gamer-PLAY LIKE THE
+        G.O.A.T.
+        </title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
 
@@ -72,10 +74,7 @@
             <div class="image-container">
                 <div class="games">
                     <img src="images/Rectangle 4.png" alt="">
-                    <p class="section-description-img">No Download. No Installs. Play games Instantly on Gamer.</p>
-                    <!-- <div class="middle">
-                        <img src="images/play-button 1.png" alt="">
-                    </div> -->
+                    <p class="section-description-img">No Download. No Installs. Play <br> games Instantly on Gamer.</p>
                 </div>
                 <div class="games">
                     <img src="images/Rectangle 5.png" alt="">
@@ -87,7 +86,7 @@
                 </div>
                 <div class="games">
                     <img src="images/Rectangle 6.png" alt="">
-                    <p class="section-description-img">Busted gaming on school laptop, but you are still lit.</p>
+                    <p class="section-description-img">Busted gaming on school laptop, <br> but you are still lit.</p>
                 </div>
 
             </div>
@@ -192,29 +191,47 @@
             </h3>
         </div>
         <div class="keys">
-            <a href="">Our Story</a>
+            <div class="key-1">
+                <a href="">Our Story</a>
             <a href="">Games</a>
             <a href="">Web Games</a>
-            <a href="">Careers</a>
+            </div>
+
+            <div class="key-2">
+                <a href="">Careers</a>
             <a href="">Support</a>
             <a href="">My Account</a>
+            </div>
         </div>
         <div class="social-medias">
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <div class="sm-1">
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
             <a href=""><i class="fa-brands fa-facebook"></i></a>
             <a href=""><i class="fa-brands fa-youtube"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+            <div class="sm-2">
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
             <a href=""><i class="fa-brands fa-instagram"></i></a>
             <a href=""><i class="fa-brands fa-apple"></i></a>
+            </div>
         </div>
         <div class="policy">
-            <p>Terms and Conditions</p>
+            <div class="po-1">
+                <p>Terms and Conditions</p>
             <p>Privacy Policy</p>
-            <p>Cookie Policy</p>
+            </div>
+            <div class="po-2">
+                <p>Cookie Policy</p>
             <p>Privacy Settings</p>
+            </div>
         </div>
-        <div class="policy" id="last">
-            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        <div class="last policy">
+            <div class="la-1">
+                <p>Play Games @ Gamer </p>
+            </div>
+            <div class="la-2">
+                <p>@ 2000-2023 Gamer Bangladesh</p>
+            </div>
         </div>
     </footer>
     
