--- a/index.html
+++ b/index.html
@@ -75,18 +75,38 @@
                 <div class="games">
                     <img src="images/Rectangle 4.png" alt="">
                     <p class="section-description-img">No Download. No Installs. Play <br> games Instantly on Gamer.</p>
+                    <div class="overlay">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <p class="overlay-text">Watch Now</p>
+
+                    </div>
                 </div>
                 <div class="games">
                     <img src="images/Rectangle 5.png" alt="">
                     <p class="section-description-img">Did you score? #unblockedgames #school</p>
+                    <div class="overlay">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <p class="overlay-text">Watch Now</p>
+
+                    </div>
                 </div>
                 <div class="games">
                     <img src="images/Rectangle 7.png" alt="">
                     <p class="section-description-img">Breaking game records like OG</p>
+                    <div class="overlay">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <p class="overlay-text">Watch Now</p>
+
+                    </div>
                 </div>
                 <div class="games">
                     <img src="images/Rectangle 6.png" alt="">
                     <p class="section-description-img">Busted gaming on school laptop, <br> but you are still lit.</p>
+                    <div class="overlay">
+                        <i class="fa-solid fa-circle-play"></i>
+                        <p class="overlay-text">Watch Now</p>
+
+                    </div>
                 </div>
 
             </div>
@@ -131,25 +151,25 @@
                 <a href="">
                     <div class="main-items">
                         <div class="item-img"><img src="images/Rectangle 12.png" alt="" srcset=""></div>
-                        <div class="item-text"><p>Action Games</p></div>
+                        <div class="item-text"><p>Adventure Games</p></div>
                     </div>
                 </a>
                 <a href="">
                     <div class="main-items">
                         <div class="item-img"><img src="images/Rectangle 13.png" alt="" srcset=""></div>
-                        <div class="item-text"><p>Action Games</p></div>
+                        <div class="item-text"><p>Arcade Games</p></div>
                     </div>
                 </a>
                 <a href="">
                     <div class="main-items">
                         <div class="item-img"><img src="images/Rectangle 14.png" alt="" srcset=""></div>
-                        <div class="item-text"><p>Action Games</p></div>
+                        <div class="item-text"><p>Educational Games</p></div>
                     </div>
                 </a>
                 <a href="">
                     <div class="main-items">
                         <div class="item-img"><img src="images/Rectangle 15.png" alt="" srcset=""></div>
-                        <div class="item-text"><p>Action Games</p></div>
+                        <div class="item-text"><p>Word Games</p></div>
                     </div>
                 </a>
                 
@@ -158,25 +178,25 @@
                 <a href="">
                     <div class="main-items">
                         <div class="item-img"><img src="images/Rectangle 16.png" alt="" srcset=""></div>
-                        <div class="item-text"><p>Action Games</p></div>
+                        <div class="item-text"><p>Role Palying Games</p></div>
                     </div>
                 </a>
                 <a href="">
                     <div class="main-items">
                         <div class="item-img"><img src="images/Rectangle 17.png" alt="" srcset=""></div>
-                        <div class="item-text"><p>Action Games</p></div>
+                        <div class="item-text"><p>Music & Audio Games</p></div>
                     </div>
                 </a>
                 <a href="">
                     <div class="main-items">
                         <div class="item-img"><img src="images/Rectangle 18.png" alt="" srcset=""></div>
-                        <div class="item-text"><p>Action Games</p></div>
+                        <div class="item-text"><p>Puzzle Games</p></div>
                     </div>
                 </a>
                 <a href="">
                     <div class="main-items">
                         <div class="item-img"><img src="images/Rectangle 19.png" alt="" srcset=""></div>
-                        <div class="item-text"><p>Action Games</p></div>
+                        <div class="item-text"><p>Strategy Games</p></div>
                     </div>
                 </a>
             </div>
