last two commit

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <section class="feature">
             <div class="feature-content">
                 <h2 class="section-title-1">
-                    <span class="Pink">Play Instantly,</span><br>
+                    <span class="purple">Play Instantly,</span><br>
                     No Downloads <br>
                     No Installs.
                 </h2>
