--- a/index.html
+++ b/index.html
@@ -241,21 +241,18 @@
             </div>
         </div>
         <div class="policy">
-            <div class="po-1">
+            <!-- <div class="po-1"> -->
                 <p>Terms and Conditions</p>
             <p>Privacy Policy</p>
-            </div>
-            <div class="po-2">
+            <!-- </div>
+            <div class="po-2"> -->
                 <p>Cookie Policy</p>
             <p>Privacy Settings</p>
-            </div>
+            <!-- </div> -->
         </div>
         <div class="last policy">
-            <div class="la-1">
-                <p>Play Games @ Gamer </p>
-            </div>
-            <div class="la-2">
-                <p>@ 2000-2023 Gamer Bangladesh</p>
+        
+                <p>Play Games@Gamer @ 2000-2023 Gamer Bangladesh</p>
             </div>
         </div>
     </footer>
